--- a/src/api/package.json
+++ b/src/api/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
